objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Elogio</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelada</fullName>
        </values>
        <values>
            <fullName>Pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolvida</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Reclamação</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelada</fullName>
        </values>
        <values>
            <fullName>Encerrada</fullName>
        </values>
        <values>
            <fullName>Pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolvida</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Responsabilidade Civil</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelada</fullName>
        </values>
        <values>
            <fullName>Encerrada</fullName>
        </values>
        <values>
            <fullName>Pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolvida</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Solicitações</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelada</fullName>
        </values>
        <values>
            <fullName>Encerrada</fullName>
        </values>
        <values>
            <fullName>Pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolvida</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sugestão</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelada</fullName>
        </values>
        <values>
            <fullName>Pendente</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolvida</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>TW1_DataHora_encerramento__c</fullName>
        <label>Data/Hora de encerramento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Hora_de_abertura__c</fullName>
        <label>Data/Hora do ocorrido</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_do_ocorrido__c</fullName>
        <inlineHelpText>Informa neste campo a data em que aconteceu a ocorrência com o cliente.</inlineHelpText>
        <label>Data do ocorrido</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Email_do_Cliente__c</fullName>
        <label>Email do Cliente</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Expectativa_de_Sinistro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expectativa de Sinistro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Externo_Shopping__c</fullName>
        <externalId>true</externalId>
        <label>ID Externo Shopping</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Marca__c</fullName>
        <label>Marca</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Modelo__c</fullName>
        <label>Modelo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nivel_1__c</fullName>
        <label>Nível 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administracao</fullName>
                    <label>Administração</label>
                </value>
                <value>
                    <fullName>Area de atendimento</fullName>
                </value>
                <value>
                    <fullName>Área de atendimento</fullName>
                </value>
                <value>
                    <fullName>Arquitetura e Ambiente</fullName>
                </value>
                <value>
                    <fullName>Atendimento</fullName>
                </value>
                <value>
                    <fullName>Atendimento brigada</fullName>
                </value>
                <value>
                    <fullName>Clientes x loja</fullName>
                </value>
                <value>
                    <fullName>Clientes x loja/stands</fullName>
                </value>
                <value>
                    <fullName>Clientes x shopping</fullName>
                </value>
                <value>
                    <fullName>Comercialização lojas e quiosques</fullName>
                </value>
                <value>
                    <fullName>Contagem de estoque/balanço/troca de coleção e vitrine (até às 10h)</fullName>
                </value>
                <value>
                    <fullName>Do lojista</fullName>
                </value>
                <value>
                    <fullName>Envio de currículos para lojas</fullName>
                </value>
                <value>
                    <fullName>Envio de currículos para o shopping</fullName>
                </value>
                <value>
                    <fullName>Estacionamento</fullName>
                </value>
                <value>
                    <fullName>Informações diversas</fullName>
                </value>
                <value>
                    <fullName>Informações sobre cinema</fullName>
                </value>
                <value>
                    <fullName>Informações sobre eventos</fullName>
                </value>
                <value>
                    <fullName>Informações sobre lojas</fullName>
                </value>
                <value>
                    <fullName>Informações sobre quiosques</fullName>
                </value>
                <value>
                    <fullName>Limpeza</fullName>
                </value>
                <value>
                    <fullName>Limpeza e conservação</fullName>
                </value>
                <value>
                    <fullName>Loja/stands x shopping</fullName>
                </value>
                <value>
                    <fullName>Loja x shopping</fullName>
                </value>
                <value>
                    <fullName>Manutenção</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Mix de lojas</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
                <value>
                    <fullName>Prestadores de serviço</fullName>
                </value>
                <value>
                    <fullName>Segurança</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Nivel_2__c</fullName>
        <label>Nível 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TW1_Nivel_1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Atendimento</fullName>
                </value>
                <value>
                    <fullName>Estrutura da loja</fullName>
                </value>
                <value>
                    <fullName>Administração</fullName>
                </value>
                <value>
                    <fullName>Area de atendimento</fullName>
                </value>
                <value>
                    <fullName>Arquitetura e ambiente</fullName>
                </value>
                <value>
                    <fullName>Conservação</fullName>
                </value>
                <value>
                    <fullName>Estacionamento</fullName>
                </value>
                <value>
                    <fullName>Manutenção</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Segurança</fullName>
                </value>
                <value>
                    <fullName>Área de atendimento</fullName>
                </value>
                <value>
                    <fullName>Estrutura banheiro familia</fullName>
                </value>
                <value>
                    <fullName>Estrutura fraldario</fullName>
                </value>
                <value>
                    <fullName>Serviços concierge/espaço cliente</fullName>
                </value>
                <value>
                    <fullName>Serviços do fraldário</fullName>
                </value>
                <value>
                    <fullName>Ações e promoções</fullName>
                </value>
                <value>
                    <fullName>Adminstração</fullName>
                </value>
                <value>
                    <fullName>Limpeza</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Telefone</fullName>
                </value>
                <value>
                    <fullName>Acidentes</fullName>
                </value>
                <value>
                    <fullName>Atendimento lojista</fullName>
                </value>
                <value>
                    <fullName>Furtos</fullName>
                </value>
                <value>
                    <fullName>Não conformidade cdc</fullName>
                </value>
                <value>
                    <fullName>Roubos</fullName>
                </value>
                <value>
                    <fullName>Troca de mercadorias</fullName>
                </value>
                <value>
                    <fullName>Cancela/sem parar</fullName>
                </value>
                <value>
                    <fullName>Cobrança</fullName>
                </value>
                <value>
                    <fullName>Dano ao shopping</fullName>
                </value>
                <value>
                    <fullName>Danos a motos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_NomeCompleto_Cliente__c</fullName>
        <label>Nome completo (wtc)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Placa__c</fullName>
        <label>Placa</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Setor__c</fullName>
        <label>Setor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAC</fullName>
                </value>
                <value>
                    <fullName>CAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Casos</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Sinistro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sinistro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Solucao__c</fullName>
        <label>Solução</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Telefone_do_Cliente__c</fullName>
        <label>Telefone do Cliente</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Apurado__c</fullName>
        <label>Valor Apurado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Final__c</fullName>
        <formula>TW1_Valor_Apurado__c - TW1_Valor_Franquia__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Final</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Franquia__c</fullName>
        <label>Valor Franquia</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Reclamado__c</fullName>
        <label>Valor Reclamado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todas as ocorrências abertas</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Ocorr_ncias_com_Expectativa_de_Sinistro</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>TW1_Data_do_ocorrido__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TW1_Expectativa_de_Sinistro__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Ocorrências com Expectativa de Sinistro</label>
    </listViews>
    <listViews>
        <fullName>Shopping_Center_Iguatemi_Porto_Alegre</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TW1_Shopping__c</field>
            <operation>equals</operation>
            <value>Shopping Center Iguatemi Porto Alegre</value>
        </filters>
        <label>Shopping Center Iguatemi Porto Alegre</label>
        <sharedTo>
            <group>TW1_Grupo_Shopping_Center_IguaPortoAlegr</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sinistros</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TW1_Sinistro__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TW1_Setor__c</field>
            <operation>equals</operation>
            <value>CAL</value>
        </filters>
        <label>Sinistros da CAL</label>
    </listViews>
    <listViews>
        <fullName>TW1_Ancar_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Ancar</label>
        <queue>TW1_Ancar_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TW1_BotafogoPraia_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Botafogo Praia Shopping</label>
        <queue>TW1_BotafogoPraia_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TW1_BoulevardRio_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Boulevard Rio Shopping</label>
        <queue>TW1_BoulevardRio_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TW1_Centervale_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Centervale Shopping</label>
        <queue>TW1_Centervale_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TW1_ConjuntoNacional_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Shopping Conjunto Nacional</label>
        <queue>TW1_ConjuntoNacional_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TW1_Downtown_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Downtown</label>
        <queue>TW1_Downtown_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TW1_Eldorado_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Shopping Eldorado</label>
        <queue>TW1_Eldorado_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TW1_Golden_Square_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Golden Square Shopping</label>
        <queue>TW1_Golden_Square_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TW1_Metro_Itaquera_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Shopping Metro Itaquera</label>
        <queue>TW1_Metro_Itaquera_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Elogios</fullName>
        <active>true</active>
        <businessProcess>Elogio</businessProcess>
        <label>Elogios</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reclamaoes</fullName>
        <active>true</active>
        <businessProcess>Reclamação</businessProcess>
        <label>Reclamações</label>
    </recordTypes>
    <recordTypes>
        <fullName>Responsabilidade_Civil</fullName>
        <active>true</active>
        <businessProcess>Responsabilidade Civil</businessProcess>
        <label>Responsabilidade Civil</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solicitacoes</fullName>
        <active>true</active>
        <businessProcess>Solicitações</businessProcess>
        <label>Solicitações</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sugestoes</fullName>
        <active>true</active>
        <businessProcess>Sugestão</businessProcess>
        <label>Sugestões</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Data_do_ocorrido_origem_required</fullName>
        <active>false</active>
        <errorConditionFormula>(ISBLANK(TW1_Data_Hora_de_abertura__c) || ISPICKVAL(Origin, &quot;&quot;))</errorConditionFormula>
        <errorMessage>É necessário preencher corretamente os campos Data/hora do ocorrido e Origem.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Caso_Impede_NovoCaso_FaleConosco</fullName>
        <active>false</active>
        <description>Usuário do perfil atendimento não deve criar caso do tipo Fale Conosco.</description>
        <errorConditionFormula>IF((ISNEW() || ISCHANGED(Origin)) &amp;&amp; $User.ProfileId = &apos;00e1I000000NU7a&apos; &amp;&amp; 
ISPICKVAL(Origin, &quot;Web&quot;), True, False)</errorConditionFormula>
        <errorMessage>Novos casos não devem ser abertos com o campo &quot;Origem do Caso&quot; igual a &quot;Fale Conosco&quot;, favor escolher outro item da lista.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Ocorrencia_Solicida_Dados_Veiculo</fullName>
        <active>false</active>
        <description>Caso nível 1 de reclamação seja igual a Estacionamento se faz necessário o preenchimento do veículo.</description>
        <errorConditionFormula>ISPICKVAL(TW1_Nivel_1__c, &apos;Estacionamento&apos;) &amp;&amp; (ISBLANK(TW1_Modelo__c) || ISBLANK(TW1_Marca__c) || ISBLANK(TW1_Placa__c))</errorConditionFormula>
        <errorMessage>Para ocorrências referente a &quot;Estacionamento&quot; se faz necessário o preenchimento da sessão dados do veículo.</errorMessage>
    </validationRules>

</CustomObject>